# OSL_Project

./: .dockerignore  .gitignore  Dockerfile  README.md  ci_test.py  docker-compose.yml  main.py  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yml
app/: main.py
k8s/production/: deployment.yaml
k8s/staging/: deployment.yaml
logs/: prediction_data.json
model/: model.pkl  scaler.pkl
src/: auto_retrain.py  data_integestion.py  huggingface_explanation.py  predict.py  preprocessing.py  train_model.py
tests/: test_integration.py  test_predict.py  test_preprocessing.py  test_train_model.py
