[metadata]
name = osl-sla
version = 1.0.0
description = Machine Failure Prediction System for OSL SLA
author = OSL Team
author_email = team@osl.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/osl-sla
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    numpy
    scikit-learn
    streamlit>=1.30.0
    altair>=5.0.0
    joblib
    matplotlib
    seaborn
    plotly
    shap

[options.packages.find]
exclude =
    tests*
    venv*
    .venv*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    pytest-xdist>=3.0.0
    flake8>=6.0.0
    black>=23.0.0
    isort>=5.12.0
    mypy>=1.0.0
    bandit>=1.7.0
    safety>=2.3.0
    pre-commit>=3.0.0

[options.entry_points]
console_scripts =
    osl-sla = app.main:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
max-complexity = 10
exclude =
    .git,
    __pycache__,
    venv,
    .venv,
    .eggs,
    *.egg,
    build,
    dist

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
ignore_missing_imports = True

[mypy-src.*]
ignore_missing_imports = True

[mypy-app.*]
ignore_missing_imports = True

[bandit]
exclude_dirs = tests,venv,.venv
skips = B101,B601

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --tb=short
    --strict-markers
    --disable-warnings
    --cov=src
    --cov=app
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
markers =
    unit: Unit tests
    integration: Integration tests
    slow: Slow tests
    model: Model-related tests
    prediction: Prediction-related tests

[coverage:run]
source = src,app
omit = 
    */tests/*
    */venv/*
    */.venv/*
    */__pycache__/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[coverage:html]
directory = htmlcov

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = src,app
skip = venv,.venv,__pycache__

[black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = \\.eggs|\\.git|\\.hg|\\.mypy_cache|\\.tox|\\.venv|venv|_build|buck-out|build|dist
